--- a/src/style.css
+++ b/src/style.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #a3a3a390;
 }
 
 /* body {
@@ -29,19 +29,34 @@ a:hover {
   min-width: 320px;
   min-height: 100vh;
 } */
-header {
+nav {
   background-color: #212121;
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
   align-items: center;
   height: 3em;
+  font-size: larger;
+}
+
+.link {
+  padding: 0 20px;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+input {
+  width: 200px;
+  height: 30px;
+  margin: 10px 0;
+  line-height: 1.5;
+  font-size: 18px;
+}
 
+.select {
+  margin: 10px 0;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -54,7 +69,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #676767;
 }
 button:focus,
 button:focus-visible {
@@ -62,8 +77,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
+  /* max-width: 1280px; */
+  /* margin: 0 auto;
+  padding: 2rem; */
   text-align: center;
 }
