--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital@0;1&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'JetBrains Mono', monospace;
   line-height: 1.5;
   font-weight: 400;
 
@@ -32,7 +34,7 @@ a:hover {
 nav {
   background-color: #212121;
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   align-items: center;
   height: 3em;
   font-size: larger;
